- fix 01: workaround to scrolling in Chromium-based browsers - fix 02: disabled overlayscrollbars as a workaround to the scroll shaking due to the fix above - known: due to fix 02, there is scroll jumping in certain posts/articles

--- a/assets/css/youronly.one-head-04-local.css
+++ b/assets/css/youronly.one-head-04-local.css
@@ -113,3 +113,14 @@ figure {
   vertical-align: middle;
 }
 /* END: Yuki defaults */
+
+html body {
+  background-attachment: fixed;
+}
+
+html body div.flip-container div.flipper section.front,
+html body div.flip-container div.flipper section.back {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
+}
